edu/guestbook/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: guestbook
    tier: frontend
spec:
  # comment or delete the following line if you want to use a LoadBalancer
  type: ClusterIP
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  # type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: guestbook
    tier: frontend

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: guestbook-ingress
spec:
  tls:
  - hosts:
    - guestbook.40.70.2.20.xip.io
    secretName: xipio-tls-cert
  rules:
    - host: guestbook.40.70.2.20.xip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: guestbook-frontend
              servicePort: 80
